--- a/assets/urlscraper.publish.css
+++ b/assets/urlscraper.publish.css
@@ -2,7 +2,7 @@
  * URL Scraper Field for Symphony
  *
  * @authors: Dave Allen, James Lambie @ We Are Daddy
- * @source: http://github.com/jimlambie/urlscraper
+ * @source: http://github.com/jimlambie/urlscraperfield
  */
 
 
@@ -26,7 +26,7 @@
 	background-repeat: no-repeat !important;
 }
 
-.dark.editable.searchable.duplicator.empty.collapsible {
+.field-urlscraper .dark.editable.searchable.duplicator.empty.collapsible {
 	background: #333;
 	margin: 20px 0 0 0;
 }
@@ -35,15 +35,15 @@
 	margin: 0 0 5px;
 }
 
-.bx-loading {
+.field-urlscraper .bx-loading {
 	display: none;
 }
 
-img.slider_image {
+.field-urlscraper img.slider_image {
 	cursor: pointer;
 }
 
-img.slider_image.selected {
+.field-urlscraper img.slider_image.selected {
 	border: 4px solid greenyellow;
 	margin: 3px;
 	width: 95%;
